# actix-js

./: .gitignore  .npmrc  ADVANCED_MEMORY_OPTIMIZATION.md  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README_LRU_CACHE.md  biome.json  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.spec.ts
benchmark/: README.md  actix-server.js  actix-server.ts  native-server.js  native-server.ts  uws.js
benchmark/rust-native/: Cargo.toml
benchmark/rust-native/src/: main.rs
examples/: localTest.js  server.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: verify-optimizations.ps1
src/: json_optimizer.rs  lib.rs  request.rs  response.rs
src/router/: mod.rs  node_functions.rs  read_only.rs  store.rs
