[package]
edition = "2021"
name = "qunto_actix-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
mimalloc = { version = "*", features = ["secure"] }
actix-web = "4.3.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
bytes = "1.0"
matchit = "0.7"
lazy_static = "1.4"
parking_lot = "0.12"
halfbrown = "0.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
