[package]
name = "actix-native-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"

[profile.release]
# 最高优化级别，与主项目保持一致
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols" 